==> blmeue/STM32SmartLcok/AS608/Bsp/AS608.c <==
#include <string.h>
#include <stdio.h>
#include "delay.h"
#include "usart.h"
#include "as608.h"

void PS_StaGPIO_Init(void)
{   
  GPIO_InitTypeDef  GPIO_InitStruct;
  __HAL_RCC_GPIOA_CLK_ENABLE();
  
  //初始化读状态引脚GPIOA11
//  GPIO_InitStructure.Pin = GPIO_PIN_11;
//  GPIO_InitStructure.Mode = GPIO_MODE_INPUT; 		 //IPD:下拉输入
//  GPIO_InitStructure.Pull = GPIO_PULLDOWN;		 //
// 
//  HAL_GPIO_Init(GPIOA, &GPIO_InitStructure);//初始化GPIO	
  GPIO_InitStruct.Pin = GPIO_PIN_11;
  GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
  GPIO_InitStruct.Pull = GPIO_PULLDOWN;
  HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);
}

static uint8_t MYUSART_SendData(uint8_t data)
{
	if(HAL_UART_Transmit(&AS608_UART,&data,1,0xff) == HAL_OK)
		return 0;
	return 1;
}

static uint8_t *JudgeStr(uint16_t waittime)
{
  char *data;
  uint8_t str[8];
  str[0] = 0xef;
  str[1] = 0x01;
  str[2] = AS608Addr >> 24;
  str[3] = AS608Addr >> 16;
  str[4] = AS608Addr >> 8;
  str[5] = AS608Addr;
  str[6] = 0x07;
  str[7] = '\0';
  USART3_RX_STA = 0;
  while(--waittime)
  {
    delay_ms(1);
    if(USART3_RX_STA) //接收到一次数据
    {
      USART3_RX_STA = 0;
      data = strstr((const char*)USART3_RX_BUF, (const char*)str);
      if(data)
        return (uint8_t*)data;
    }
  }
  return 0;
}

uint8_t PS_HandShake(uint32_t *PS_Addr)
{
  SendHead();
  SendAddr();
  MYUSART_SendData(0X01);
  MYUSART_SendData(0X00);
  MYUSART_SendData(0X00);
  delay_ms(200);
  if(USART3_RX_STA & 0X8000) //接收到数据
  {
    if(//判断是不是模块返回的应答包
      USART3_RX_BUF[0] == 0XEF
      && USART3_RX_BUF[1] == 0X01
      && USART3_RX_BUF[6] == 0X07
    )
    {
      *PS_Addr = (USART3_RX_BUF[2] << 24) + (USART3_RX_BUF[3] << 16)
                 + (USART3_RX_BUF[4] << 8) + (USART3_RX_BUF[5]);
      USART3_RX_STA = 0;
      return 0;
    }
    USART3_RX_STA = 0;
  }
  return 1;
}

void press_FR(void)
{
  SearchResult seach;
  uint8_t ensure;
  char str[256];
  //while(1)
  //{
    ensure = PS_GetImage();
    if(ensure == 0x00) //获取图像成功
    {
      printf("获取图像成功成功\r\n");
      ensure = PS_GenChar(CharBuffer1);
      if(ensure == 0x00) //生成特征成功
      {
        ensure = PS_HighSpeedSearch(CharBuffer1, 0, 99, &seach);
        if(ensure == 0x00) //搜索成功
        {
           
		   printf("指纹验证成功");
           figuer_count=0;
           sprintf(str, " ID:%d 得分:%d  view:%d", seach.pageID, seach.mathscore,view);
		   printf("%s\r\n",str);
           OLED_CLS();
           view=1;
           HAL_Delay(1000);
            return;
           // break;
        }
        else
        {
		  printf("验证失败\r\n");
          OLED_CLS();
          view=2;
          figuer_count++;
          if(figuer_count>3)
          {
              figure_flag=1;
          }
          HAL_Delay(1000);
            return;
        }
      }
      else
			{};
			printf("请按手指\r\n");
    }
   //}
}

void Add_FR(void)
{
  uint8_t i, ensure, processnum = 0;
  uint8_t ID_NUM = 0;
  //ID_NUM_store=MyFLASH_ReadWord(STORE_START_ADDRESS + 13 * 2);
  if(ID_NUM_store>=3)
  {

    printf("录入指纹失败，只能录入3个指纹\r\n");
    OLED_CLS();
    view=14;
    return;
  }
   while(1)
   {
    if(button4_4_Scan()==13)
    {
        OLED_CLS();
        view=3;
        break;
    }
    switch (processnum)
    {
     case 0:
      i++;
			printf("请按手指\r\n");
      ensure = PS_GetImage();
      if(ensure == 0x00)
      {
        ensure = PS_GenChar(CharBuffer1); //生成特征
        if(ensure == 0x00)
        {
					printf("指纹正常\r\n");
          i = 0;
          processnum = 1; //跳到第二步
        }
        else ShowErrMessage(ensure);
      }
      else ShowErrMessage(ensure);
      break;
 
     case 1:
      i++;
		  printf("请再按一次\r\n");
      ensure = PS_GetImage();
      if(ensure == 0x00)
      {
        ensure = PS_GenChar(CharBuffer2); //生成特征
        if(ensure == 0x00)
        {
					printf("指纹正常\r\n");
          i = 0;
          processnum = 2; //跳到第三步
        }
        else ShowErrMessage(ensure);
      }
      else ShowErrMessage(ensure);
      break;
 
     case 2:
		  printf("对比两次指纹\r\n");
      ensure = PS_Match();
      if(ensure == 0x00)
      {
				printf("对比成功\r\n");
        processnum = 3; //跳到第四步
      }
      else
      {
				printf("对比失败\r\n");
        ShowErrMessage(ensure);
        i = 0;
        processnum = 0; //跳回第一步
      }
      delay_ms(500);
      break;
 
    case 3:
	  printf("生成指纹模板\r\n");
      delay_ms(500);
      ensure = PS_RegModel();
      if(ensure == 0x00)
      {
				printf("生成指纹模板成功\r\n");
        processnum = 4; //跳到第五步
      }
      else
      {
        processnum = 0;
        ShowErrMessage(ensure);
      }
      delay_ms(1000);
      break;
 
    case 4:
		//printf("默认选择ID为1 \r\n");
        //printf("录入指纹个数为%d \r\n",ID_NUM_store+1);
        //HAL_FLASH_Program(FLASH_TYPEPROGRAM_HALFWORD,STORE_START_ADDRESS + 13 * 2,ID_NUM_store);
        
//        printf("存入flash指纹ID为%d \r\n",MyFLASH_ReadHalfWord(STORE_START_ADDRESS + 13 * 2));
       
		ID_NUM ++;
		#if 0
      while(key_num != 3)
      {
        key_num = KEY_Scan(0);
        if(key_num == 2)
        {
          key_num = 0;
          if(ID_NUM > 0)
            ID_NUM--;
        }
        if(key_num == 4)
        {
          key_num = 0;
          if(ID_NUM < 99)
            ID_NUM++;
        }
        OLED_ShowCH(40, 6, "ID=");
        OLED_ShowNum(65, 6, ID_NUM, 2, 1);
      }
		
      key_num = 0;
			#endif
      //ensure = PS_StoreChar(CharBuffer2, ID_NUM); //储存模板
      uint16_t id_store=0;
      for(int k=0;k<3;k++)
       {
            if(Store_Id[k]==0)
            {
               Store_Id[k]=1;
                id_store=k+2;
               break;
            }
        }
     // if(ID_NUM_store<3){
            ensure = PS_StoreChar(CharBuffer2, id_store); //储存模板
            ID_NUM_store++;
            printf("录入指纹个数为%d \r\n",ID_NUM_store);
          if(ensure == 0x00)
            {
            //if(ID_NUM_store<5){
                printf("录入指纹成功\r\n");
                
                Store_Save();
                OLED_CLS();
                view=11;
                HAL_UART_Transmit(&huart2,"addsuccess",15,50);
                //HAL_UART_Transmit(&huart2,"录入指纹成功",200,50);
                return;
            }
          else
          {
            processnum = 0;
            ShowErrMessage(ensure);
          }
//       }
//     else
//       {
//                printf("录入指纹失败，只能录入3个指纹\r\n");
//                OLED_CLS();
//                view=12;
//                return;
//       }
            delay_ms(1000);          
      
      break;
    }
    delay_ms(400);
    if(i == 10) //超过5次没有按手指则退出
    {
      break;
    }
  }
}

void Del_FR(uint16_t ID_NUM_delete)
{
  uint8_t  ensure;
  //uint16_t ID_NUM = 0;
  //printf("单个删除指纹开始，默认删除ID为1");
    if(ID_NUM_store>0){
    printf("单个删除指纹开始，删除ID为：%d\r\n",ID_NUM_delete);
    
  //ID_NUM = 1;
  //ensure = PS_DeletChar(ID_NUM, 1); //删除单个指纹
      ensure = PS_DeletChar(ID_NUM_delete, 1); //删除单个指纹
      if(ensure == 0)
      {
          if(Store_Id[ID_NUM_delete-2]==1){
              Store_Id[ID_NUM_delete-2]=0;
              printf("删除指纹成功 \r\n");
              ID_NUM_store = ID_NUM_store -1;
              printf("剩余指纹数为：%d\r\n",ID_NUM_store);
              Store_Save();
              view=13;
              HAL_UART_Transmit(&huart2,"deletesuccess",15,50);
              //HAL_UART_Transmit(&huart2,"删除指纹成功",200,50);
          }
          else
          {
              OLED_CLS();
              printf("剩余指纹数为：%d\r\n",ID_NUM_store);
              printf("删除指纹失败，该ID未录入指纹\r\n");
              HAL_UART_Transmit(&huart2,"NoId",15,50);
              //HAL_UART_Transmit(&huart2,"删除指纹失败，该ID未录入指纹",200,50);
              view=16;
          }
          return;
      }
      else
      { 
          ShowErrMessage(ensure);
      }
  }
  else
      {
          printf("删除指纹失败，指纹数据为空\r\n");
      }
  delay_ms(1500);
 
}
