==> ruinlong/STM32-AS608/user/src/as608.c <==
#include <stm32f10x_conf.h>

void PS_StaGPIO_Init(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE); //使能GPIOB时钟
	
	//初始化读状态引脚GPIOb
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_0;		  //PA.1
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPD;	  //输入下拉模式
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz; //50MHz
	GPIO_Init(GPIOB, &GPIO_InitStructure);			  //初始化GPIO
}

static void MYUSART_SendData(u8 data)
{
	while ((USART1->SR & 0X40) == 0);	
	USART1->DR = data;
}

static u8 *JudgeStr(u16 waittime)
{
	char *data;
	u8 str[8];
	str[0] = 0xef;
	str[1] = 0x01;
	str[2] = AS608Addr >> 24;
	str[3] = AS608Addr >> 16;
	str[4] = AS608Addr >> 8;
	str[5] = AS608Addr;
	str[6] = 0x07;
	str[7] = '\0';
	USART1_RX_STA = 0;
	while (--waittime)
	{
		delay_ms(1);
		if (USART1_RX_STA & 0X8000) //接收到一次数据
		{
			USART1_RX_STA = 0;
			data = strstr((const char *)USART1_RX_BUF, (const char *)str);
			if (data)
				return (u8 *)data;
		}
	}
	return 0;
}

u8 PS_HandShake(u32 *PS_Addr)
{
	SendHead();
	SendAddr();
	MYUSART_SendData(0X01);
	MYUSART_SendData(0X00);
	MYUSART_SendData(0X00);
	delay_ms(200);

	if (USART1_RX_STA & 0X8000) //接收到数据
	{
		//printf("连接成功！！");
		if ( //判断是不是模块返回的应答包
			USART1_RX_BUF[0] == 0XEF && USART1_RX_BUF[1] == 0X01 && USART1_RX_BUF[6] == 0X07)
		{
			*PS_Addr = (USART1_RX_BUF[2] << 24) + (USART1_RX_BUF[3] << 16) + (USART1_RX_BUF[4] << 8) + (USART1_RX_BUF[5]);
			USART1_RX_STA = 0;
			return 0;
		}
		USART1_RX_STA = 0;
	}
	return 1;
}

void Add_FR(void)
{
  u8 i, ensure, processnum = 0;
  u8 ID_NUM = 0;
  while(1)
  {
			GPIO_ResetBits(LED_PORT,LED);
    switch (processnum)
    {		
    case 0:
      i++;
			WriteString((u8 *)"                ",0,0);delay_ms(1);
		  WriteString((u8 *)"    请按手指    ",1,0);delay_ms(1);
			WriteString((u8 *)"                ",2,0);delay_ms(1);
			WriteString((u8 *)"                ",3,0);delay_ms(1);
      ensure = PS_GetImage();
      if(ensure == 0x00)
      {
        ensure = PS_GenChar(CharBuffer1); //生成特征
        if(ensure == 0x00)
        {
					WriteString((u8 *)"                ",0,0);delay_ms(1);
          WriteString((u8 *)"    指纹正常    ",1,0);delay_ms(1);   
					WriteString((u8 *)"                ",2,0);delay_ms(1);
					WriteString((u8 *)"                ",3,0);delay_ms(1);
          i = 0;
          processnum = 1; //跳到第二步
        }
        else ShowErrMessage(ensure);
      }
      else ShowErrMessage(ensure);
      break;

    case 1:
      i++;
			WriteString((u8 *)"                ",0,0);delay_ms(1);
		  WriteString((u8 *)"  请再按一次    ",1,0);delay_ms(1);
			WriteString((u8 *)"                ",2,0);delay_ms(1);
			WriteString((u8 *)"                ",3,0);delay_ms(1);
      ensure = PS_GetImage();
      if(ensure == 0x00)
      {
        ensure = PS_GenChar(CharBuffer2); //生成特征
        if(ensure == 0x00)
        {
					WriteString((u8 *)"                ",0,0);delay_ms(1);
          WriteString((u8 *)"    指纹正常    ",1,0);delay_ms(1);
					WriteString((u8 *)"                ",2,0);delay_ms(1);
					WriteString((u8 *)"                ",3,0);delay_ms(1);
          i = 0;
          processnum = 2; //跳到第三步
        }
        else ShowErrMessage(ensure);
      }
      else ShowErrMessage(ensure);
      break;

    case 2:
      WriteString((u8 *)"                ",0,0);delay_ms(1);
			WriteString((u8 *)"  对比两次指纹  ",1,0);delay_ms(1);
			WriteString((u8 *)"                ",2,0);delay_ms(1);
			WriteString((u8 *)"                ",3,0);delay_ms(1);
      ensure = PS_Match();
      if(ensure == 0x00)
      {
				WriteString((u8 *)"                ",0,0);delay_ms(1);
        WriteString((u8 *)"    对比成功    ",1,0);delay_ms(1);
				WriteString((u8 *)"                ",2,0);delay_ms(1);
				WriteString((u8 *)"                ",3,0);delay_ms(1);
        processnum = 3; //跳到第四步
      }
      else
      {

				WriteString((u8 *)"                ",0,0);delay_ms(1);
				WriteString((u8 *)"    对比失败    ",1,0);delay_ms(1);
				WriteString((u8 *)"                ",2,0);delay_ms(1);
				WriteString((u8 *)"                ",3,0);delay_ms(1);
        ShowErrMessage(ensure);
        i = 0;
        processnum = 0; //跳回第一步
      }
      delay_ms(500);
      break;

    case 3:
      WriteString((u8 *)"                ",0,0);delay_ms(1);
			WriteString((u8 *)"  生成指纹模板  ",1,0);delay_ms(1);
			WriteString((u8 *)"                ",2,0);delay_ms(1);
			WriteString((u8 *)"                ",3,0);delay_ms(1);
      delay_ms(500);
      ensure = PS_RegModel();
      if(ensure == 0x00)
      {
        WriteString((u8 *)"                ",0,0);delay_ms(1);
				WriteString((u8 *)"生成指纹模板成功",1,0);delay_ms(1);
				WriteString((u8 *)"                ",2,0);delay_ms(1);
				WriteString((u8 *)"                ",3,0);delay_ms(1);
        processnum = 4; //跳到第五步
      }
      else
      {
        processnum = 0;
        ShowErrMessage(ensure);
      }
      delay_ms(1000);
      break;

    case 4:
      WriteString((u8 *)"按13加按15减    ",0,0);delay_ms(1);
      WriteString((u8 *)"按16保存        ",1,0);delay_ms(1);
      WriteString((u8 *)"ID:  000        ",2,0);delay_ms(1);
		  WriteString((u8 *)"                ",3,0);delay_ms(1);
			Key_St=0;
     while(Key_St!=15)
      {
				Key_back=Key_scanf();	
					if(FLAG==1)
					{
						FLAG = 0;						
        if(Key_back == 14)
        {					
          if(ID_NUM > 0)
            ID_NUM--;
        }
        if(Key_back == 13)
        {
          if(ID_NUM < 99)
            ID_NUM++;
        }
				if(Key_back == 15)
				{
						Key_St=15;
				}		
				LCD12864_SetWindow(2,3);											
				Write_Word((u16)ID_NUM%100/10+0x30);			
				Write_Word((u16)ID_NUM%10+0x30);			
					}
     }

      ensure = PS_StoreChar(CharBuffer2, ID_NUM); //储存模板
      if(ensure == 0x00)
      {
				WriteString((u8 *)"                ",0,0);delay_ms(1);  
				WriteString((u8 *)"  录入指纹成功  ",1,0);delay_ms(1);  
        WriteString((u8 *)"                ",2,0);delay_ms(1);      
				WriteString((u8 *)"                ",3,0);delay_ms(1);  			
				delay_ms(3000);
				state = 2;	
				WriteString((u8 *)"  管理员界面！  ",0,0);Delay_ms(1);  //修改后退出  明天修改其余两个模式 
				WriteString((u8 *)"    修改密码    ",1,0);Delay_ms(1);
				WriteString((u8 *)">   录入指纹    ",2,0);Delay_ms(1);
				WriteString((u8 *)"    删除指纹    ",3,0);Delay_ms(1);
        return ;
      }
      else
      {      
        processnum = 0;
        ShowErrMessage(ensure);
      }
      break;
    }
    delay_ms(400);
    if(i == 10) //超过5次没有按手指则退出
    {
      break;
    }
  }
}

void press_FR(void)
{
  SearchResult seach;
  u8 ensure;
  char str[20];

//  while(key_num != 1)
//  {
    key_num = KEY_Scan(0);
    ensure = PS_GetImage();
    if(ensure == 0x00) //获取图像成功
    {
      ensure = PS_GenChar(CharBuffer1);
      if(ensure == 0x00) //生成特征成功
      {
        ensure = PS_HighSpeedSearch(CharBuffer1, 0, 99, &seach);
        if(ensure == 0x00) //搜索成功
        {
						Key_Count=0;
					WriteString((u8 *)"                ",0,0);Delay_ms(1);
          WriteString((u8 *)"  指纹验证成功  ",1,0);Delay_ms(1);
         // sprintf(str, " ID:%d 得分:%d ", seach.pageID, seach.mathscore);	
					sprintf(str, " ID:%d          ", seach.pageID);	Delay_ms(1);	
          WriteString((u8 *)str,2,0);								Delay_ms(1);
					WriteString((u8 *)"                ",3,0);Delay_ms(1);
					GPIO_ResetBits(LED_PORT,LED);
					GPIO_SetBits(REALY_PORT,Realy);
					Delay_ms(3000);
					GPIO_ResetBits(REALY_PORT,Realy);	
					display_Init();	
         
        }
        else
        {
						Key_Count=0;
					WriteString((u8 *)"                ",0,0);Delay_ms(1);
          WriteString((u8 *)"    验证失败    ",1,0);Delay_ms(1);
				  WriteString((u8 *)"                ",2,0);Delay_ms(1);
					WriteString((u8 *)"                ",3,0);Delay_ms(1);
          delay_ms(1500);
        }
      }
      else
			{};
     		WriteString((u8 *)"STM32 指纹密码锁",0,0);Delay_ms(1);
				WriteString((u8 *)"                ",1,0);Delay_ms(1);
				WriteString((u8 *)"                ",2,0);Delay_ms(1);
				WriteString((u8 *)"                ",3,0);Delay_ms(1);
    }

}

void Del_FR(void)
{
   u8  ensure;
   u16 ID_NUM = 0;
   WriteString((u8 *)"13加15减16确认  ",0,0);Delay_ms(1);
   WriteString((u8 *)"14清空指纹库    ",1,0);Delay_ms(1);
   WriteString((u8 *)"ID:  000        ",2,0);delay_ms(1);
   WriteString((u8 *)"                ",3,0);Delay_ms(1);
		Key_St = 0;
	
  while(Key_St != 15)
{
	    Key_back = Key_scanf();
      if (FLAG == 1)
    {
        FLAG = 0;		
		if(Key_back == 13)
    {
      if(ID_NUM < 99)
        ID_NUM++;
    }
		
    if(Key_back == 14)
    {
      if(ID_NUM > 0)
        ID_NUM--;
    }
		
		if(Key_back == 15)
		{
				Key_St = 15;			
		}
		
		 LCD12864_SetWindow(2,3);											
		 Write_Word((u16)ID_NUM%100/10+0x30);			
		 Write_Word((u16)ID_NUM%10+0x30);		
		
		
		if(Key_back == 0)
    {
      ensure = PS_Empty(); //清空指纹库
      if(ensure == 0)
      {   
        WriteString((u8 *)"清空指纹库成功  ",1,0);delay_ms(1); 
				WriteString((u8 *)"                ",0,0);Delay_ms(1);
				WriteString((u8 *)"                ",3,0);Delay_ms(1);
				WriteString((u8 *)"                ",2,0);Delay_ms(1);
				delay_ms(1000);		
				Key_St = 15;	
				state = 2;
      }
    }		
	}
}
  ensure = PS_DeletChar(ID_NUM, 1); //删除单个指纹
  if(ensure == 0)
  {
		 WriteString((u8 *)"                ",0,0);Delay_ms(1);
		 WriteString((u8 *)"  删除指纹成功  ",1,0);Delay_ms(1);
     WriteString((u8 *)"                ",2,0);Delay_ms(1);
		 WriteString((u8 *)"                ",3,0);Delay_ms(1);
			delay_ms(1000);			
	 	 WriteString((u8 *)"  管理员界面！  ",0,0);Delay_ms(1);  //修改后退出  明天修改其余两个模式 
	   WriteString((u8 *)"    修改密码    ",1,0);Delay_ms(1);
		 WriteString((u8 *)"    录入指纹    ",2,0);Delay_ms(1);
		 WriteString((u8 *)">   删除指纹    ",3,0);Delay_ms(1);
			state = 2;	
	
  }
  else
    ShowErrMessage(ensure);
  delay_ms(1500);

}
